--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ Subhas Chandra Bose is considered the most influential freedom fighter with extr
                 </ul>
             </section>
             <footer>
-                <p> Read more about Subhash Chandra Bose|Neta ji on wikipedia.<a href="https://en.wikipedia.org/wiki/Subhas_Chandra_Bose#Biography">wikipedia</a></p>
+                <p> Read more about Subhash Chandra Bose|Neta ji on wikipedia.<a href="https://en.wikipedia.org/wiki/Subhas_Chandra_Bose#Biography">wikipedia</a>, <a href="https://www.jagranjosh.com/general-knowledge/subhas-chandra-bose-birth-anniversary-achievements-and-contributions-1446798588-1">jagranjosh</a></p>
             </footer>
         </div>
     </div>   
